--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           document.querySelector('#display').value = current_display;"/>
 
           <input type="button" class="button math_button" value="x" 
-          onclick="current_display += '*';
+          onclick="current_display += 'x';
           document.querySelector('#display').value = current_display;"/>
 
           <br />
